# kobayashi

./: .gitignore  LICENSE.txt  README.md  enemy_fleet.py  player_fleet.py  pyproject.toml  requirements.txt  run_sim.py
fleets/: example.json  example.py
kobayashi/: __init__.py  arena.py  exceptions.py  fleets.py  generate.py  player_fleet.py  util.py
kobayashi/crew/: __init__.py  gunner.py  person.py  pilot.py
kobayashi/ships/: __init__.py  base_ship.py  core_hulls.py  fighter.py  ships.py  skyward_hulls.py
kobayashi/ships/ship_ai/: __init__.py  base_ai.py  level1.py
kobayashi/tests/: test_base_ship.py  test_util.py
kobayashi/weapons/: __init__.py  base_weapon.py  core_weapons.py  other_weapons.py  photon.py  skyward_weapons.py
