[tool.poetry]
name = "kobayashi"
version = "0.1.0"
description = ""
authors = ["Zoë F <zoe@dataleek.io>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.4"
matplotlib = "^3.0"
numpy = "^1.16"
tqdm = "^4.31"
wrapt = "^1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
